[gd_scene load_steps=6 format=3 uid="uid://dys6ei52jnypc"]

[ext_resource type="PackedScene" uid="uid://bnd4xtxejul7q" path="res://entities/player/segments/normal_segment/segment.tscn" id="1_rqk11"]
[ext_resource type="Script" uid="uid://dofkym3h78uwq" path="res://entities/player/segments/flamethrower_segment/flamethrower_segment.gd" id="2_cdhy4"]
[ext_resource type="Texture2D" uid="uid://b5xc456whb26m" path="res://entities/player/segments/flamethrower_segment/flamethrower.png" id="3_dshp1"]
[ext_resource type="PackedScene" uid="uid://cmdwjtb1or6n2" path="res://entities/player/segments/flamethrower_segment/flames.tscn" id="4_dshp1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iuq86"]
size = Vector2(16, 48)

[node name="FlamethrowerSegment" instance=ExtResource("1_rqk11")]
script = ExtResource("2_cdhy4")

[node name="Circle" parent="." index="0"]
filled = false

[node name="Sprite2D" type="Sprite2D" parent="." index="6"]
texture = ExtResource("3_dshp1")

[node name="Flames1" parent="." index="7" instance=ExtResource("4_dshp1")]
position = Vector2(0, 16)
emitting = false

[node name="Flames2" parent="." index="8" instance=ExtResource("4_dshp1")]
position = Vector2(0, -16)
rotation = 3.14159
emitting = false

[node name="FlameBox1" type="Area2D" parent="." index="9"]
position = Vector2(0, 16)
rotation = 0.436332
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameBox1" index="0"]
position = Vector2(0.234524, 24.165)
shape = SubResource("RectangleShape2D_iuq86")

[node name="FlameBox2" type="Area2D" parent="." index="10"]
position = Vector2(0, -16)
rotation = 2.70526
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameBox2" index="0"]
position = Vector2(-0.234527, 24.165)
shape = SubResource("RectangleShape2D_iuq86")

[node name="OnOffTimer" type="Timer" parent="." index="11"]
wait_time = 2.5
autostart = true

[node name="HitTimer" type="Timer" parent="." index="12"]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="OnOffTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
